--- a/src/main/webapp/css/stile.css
+++ b/src/main/webapp/css/stile.css
@@ -13,3 +13,207 @@ input[type=radio] {
 	width: 30px;
 	margin: 11px 0;
 }*/
+
+.button1 {
+	color: gray;
+	padding: 15px 28px;
+	text-align: center;
+	font-size: 15px;
+	border: none;
+	background: none;
+	float: center;
+}
+.button1:hover {
+  color: white;
+}
+
+/* Remove the navbar's default margin-bottom and rounded borders */
+.navbar {
+	margin-bottom: 0;
+	border-radius: 0;
+}
+
+
+footer-social-icons {
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	font-family: 'Lato', sans-serif;
+	color: #FFF;
+	background: #322f30;
+	overflow: hidden;
+	z-index: 1000;
+	padding: 20px;
+}
+
+p>a:hover {
+	color: #d9d9d9;
+	text-decoration: underline;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	margin: 1% 0 1% 0;
+}
+
+._12 {
+	font-size: 1.2em;
+}
+
+._14 {
+	font-size: 1.4em;
+}
+
+ul {
+	padding: 0;
+	list-style: none;
+}
+
+@import url(https://fonts.googleapis.com/css?family=Lato);
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
+	
+.footer-social-icons {
+	width: 350px;
+	display: block;
+	margin: 0 auto;
+}
+
+.social-icon {
+	color: #fff;
+}
+
+ul.social-icons {
+	margin-top: 10px;
+}
+
+.social-icons li {
+	vertical-align: top;
+	display: inline;
+	height: 100px;
+}
+
+.social-icons a {
+	color: #fff;
+	text-decoration: none;
+}
+
+.fa-facebook {
+	padding: 10px 14px;
+	-o-transition: .5s;
+	-ms-transition: .5s;
+	-moz-transition: .5s;
+	-webkit-transition: .5s;
+	transition: .5s;
+	background-color: #322f30;
+}
+
+.fa-facebook:hover {
+	background-color: #3d5b99;
+}
+
+.fa-twitter {
+	padding: 10px 12px;
+	-o-transition: .5s;
+	-ms-transition: .5s;
+	-moz-transition: .5s;
+	-webkit-transition: .5s;
+	transition: .5s;
+	background-color: #322f30;
+}
+
+.fa-twitter:hover {
+	background-color: #00aced;
+}
+
+.fa-rss {
+	padding: 10px 14px;
+	-o-transition: .5s;
+	-ms-transition: .5s;
+	-moz-transition: .5s;
+	-webkit-transition: .5s;
+	transition: .5s;
+	background-color: #322f30;
+}
+
+.fa-rss:hover {
+	background-color: #eb8231;
+}
+
+.fa-youtube {
+	padding: 10px 14px;
+	-o-transition: .5s;
+	-ms-transition: .5s;
+	-moz-transition: .5s;
+	-webkit-transition: .5s;
+	transition: .5s;
+	background-color: #322f30;
+}
+
+.fa-youtube:hover {
+	background-color: #e64a41;
+}
+
+.fa-linkedin {
+	padding: 10px 14px;
+	-o-transition: .5s;
+	-ms-transition: .5s;
+	-moz-transition: .5s;
+	-webkit-transition: .5s;
+	transition: .5s;
+	background-color: #322f30;
+}
+
+.fa-linkedin:hover {
+	background-color: #0073a4;
+}
+
+.fa-github {
+	padding: 10px 14px;
+	-o-transition: .5s;
+	-ms-transition: .5s;
+	-moz-transition: .5s;
+	-webkit-transition: .5s;
+	transition: .5s;
+	background-color: #322f30;
+}
+
+.fa-github:hover {
+	background-color: #5a32a3;
+}
+   /* Add a gray background color and some padding to the footer */
+    footer {
+      background-color: black;
+      color: white;
+      padding: 25px;
+    }
+    
+    
+    /* Registrazione */
+    input[type=text] {
+	border: 2px solid black;
+	border-radius: 4px;
+	width: 100%;
+}
+
+input[type=password] {
+	border: 2px solid black;
+	border-radius: 4px;
+	width: 100%;
+}
+
+.button {
+	background-color: white;
+	border: 2px solid #008CBA;
+	color: black;
+	padding: 12px 28px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 14px;
+	margin: 4px 2px;
+	cursor: pointer;
+}
+
+.button:hover {
+	background-color: #008B8B;
+	color: white;
+}
