--- a/src/main/webapp/css/stile.css
+++ b/src/main/webapp/css/stile.css
@@ -34,18 +34,6 @@ input[type=radio] {
 }
 
 
-footer-social-icons {
-	position: fixed;
-	bottom: 0;
-	width: 100%;
-	font-family: 'Lato', sans-serif;
-	color: #FFF;
-	background: #322f30;
-	overflow: hidden;
-	z-index: 1000;
-	padding: 20px;
-}
-
 p>a:hover {
 	color: #d9d9d9;
 	text-decoration: underline;
@@ -68,122 +56,12 @@ ul {
 	list-style: none;
 }
 
-@import url(https://fonts.googleapis.com/css?family=Lato);
-@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
-	
-.footer-social-icons {
-	width: 350px;
-	display: block;
-	margin: 0 auto;
-}
-
-.social-icon {
-	color: #fff;
-}
-
-ul.social-icons {
-	margin-top: 10px;
-}
-
-.social-icons li {
-	vertical-align: top;
-	display: inline;
-	height: 100px;
-}
-
-.social-icons a {
-	color: #fff;
-	text-decoration: none;
-}
-
-.fa-facebook {
-	padding: 10px 14px;
-	-o-transition: .5s;
-	-ms-transition: .5s;
-	-moz-transition: .5s;
-	-webkit-transition: .5s;
-	transition: .5s;
-	background-color: #322f30;
-}
-
-.fa-facebook:hover {
-	background-color: #3d5b99;
-}
-
-.fa-twitter {
-	padding: 10px 12px;
-	-o-transition: .5s;
-	-ms-transition: .5s;
-	-moz-transition: .5s;
-	-webkit-transition: .5s;
-	transition: .5s;
-	background-color: #322f30;
-}
-
-.fa-twitter:hover {
-	background-color: #00aced;
-}
-
-.fa-rss {
-	padding: 10px 14px;
-	-o-transition: .5s;
-	-ms-transition: .5s;
-	-moz-transition: .5s;
-	-webkit-transition: .5s;
-	transition: .5s;
-	background-color: #322f30;
-}
-
-.fa-rss:hover {
-	background-color: #eb8231;
-}
-
-.fa-youtube {
-	padding: 10px 14px;
-	-o-transition: .5s;
-	-ms-transition: .5s;
-	-moz-transition: .5s;
-	-webkit-transition: .5s;
-	transition: .5s;
-	background-color: #322f30;
-}
-
-.fa-youtube:hover {
-	background-color: #e64a41;
-}
-
-.fa-linkedin {
-	padding: 10px 14px;
-	-o-transition: .5s;
-	-ms-transition: .5s;
-	-moz-transition: .5s;
-	-webkit-transition: .5s;
-	transition: .5s;
-	background-color: #322f30;
-}
-
-.fa-linkedin:hover {
-	background-color: #0073a4;
-}
-
-.fa-github {
-	padding: 10px 14px;
-	-o-transition: .5s;
-	-ms-transition: .5s;
-	-moz-transition: .5s;
-	-webkit-transition: .5s;
-	transition: .5s;
-	background-color: #322f30;
-}
-
-.fa-github:hover {
-	background-color: #5a32a3;
-}
-   /* Add a gray background color and some padding to the footer */
+   /* Stile del footer */
     footer {
       background-color: black;
       color: white;
       padding: 25px;
+      
     }
     
     
@@ -216,4 +94,118 @@ input[type=password] {
 .button:hover {
 	background-color: #008B8B;
 	color: white;
+}
+
+
+/*Social nel Footer */
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-google {
+  background: #dd4b39;
+  color: white;
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
+/*Stile nelle varie stanze */
+* {
+	box-sizing: border-box;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+	float: left;
+	width: 50%;
+	padding: 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+	content: "";
+	display: table;
+	clear: both;
+}
+
+/* Home Page */
+.carousel-inner img {
+	width: 100%; /* Set width to 100% */
+	margin: auto;
+	min-height: 200px;
+}
+ 
+/* Hide the carousel text when the screen is less than 600 pixels wide */
+@media ( max-width : 600px) {
+	.carousel-caption {
+		display: none;
+	}
+} 
+.thumbnail {
+    padding: 0 0 15px 0;
+    border: none;
+    border-radius: 0;
+  }
+  .thumbnail img {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 10px;
+  }
+ .thumbnail {
+    padding: 0 0 15px 0;
+    border: none;
+    border-radius: 0;
+  }
+  .thumbnail img {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 10px;
+  }
+  
+  .container {
+	padding: 80px 120px;
+}
+
+.person {
+	border: 10px solid transparent;
+	margin-bottom: 25px;
+	width: 80%;
+	height: 80%;
+	opacity: 0.7;
+}
+
+.person:hover {
+	border-color: #f1f1f1;
 }
