--- a/src/main/webapp/css/stile.css
+++ b/src/main/webapp/css/stile.css
@@ -13,7 +13,6 @@ input[type=radio] {
 	width: 30px;
 	margin: 11px 0;
 }*/
-
 .button1 {
 	color: gray;
 	padding: 15px 28px;
@@ -23,8 +22,9 @@ input[type=radio] {
 	background: none;
 	float: center;
 }
-.button1:hover { 
-  color: white;
+
+.button1:hover {
+	color: white;
 }
 
 /* Remove the navbar's default margin-bottom and rounded borders */
@@ -32,7 +32,6 @@ input[type=radio] {
 	margin-bottom: 0;
 	border-radius: 0;
 }
-
 
 p>a:hover {
 	color: #d9d9d9;
@@ -56,17 +55,15 @@ ul {
 	list-style: none;
 }
 
-   /* Stile del footer */
-    footer {
-      background-color: black;
-      color: white;
-      padding: 25px;
-      
-    }
-    
-    
-    /* Registrazione */
-    input[type=text] {
+/* Stile del footer */
+footer {
+	background-color: black;
+	color: white;
+	padding: 25px;
+}
+
+/* Registrazione */
+input[type=text] {
 	border: 2px solid black;
 	border-radius: 4px;
 	width: 100%;
@@ -96,49 +93,48 @@ input[type=password] {
 	color: white;
 }
 
-
 /*Social nel Footer */
 .fa {
-  padding: 20px;
-  font-size: 30px;
-  width: 50px;
-  text-align: center;
-  text-decoration: none;
-  margin: 5px 2px;
+	padding: 20px;
+	font-size: 30px;
+	width: 50px;
+	text-align: center;
+	text-decoration: none;
+	margin: 5px 2px;
 }
 
 .fa:hover {
-    opacity: 0.7;
+	opacity: 0.7;
 }
 
 .fa-facebook {
-  background: #3B5998;
-  color: white;
+	background: #3B5998;
+	color: white;
 }
 
 .fa-twitter {
-  background: #55ACEE;
-  color: white;
+	background: #55ACEE;
+	color: white;
 }
 
 .fa-google {
-  background: #dd4b39;
-  color: white;
+	background: #dd4b39;
+	color: white;
 }
 
 .fa-linkedin {
-  background: #007bb5;
-  color: white;
+	background: #007bb5;
+	color: white;
 }
 
 .fa-youtube {
-  background: #bb0000;
-  color: white;
+	background: #bb0000;
+	color: white;
 }
 
 .fa-instagram {
-  background: #125688;
-  color: white;
+	background: #125688;
+	color: white;
 }
 
 /*Stile nelle varie stanze */
@@ -166,35 +162,39 @@ input[type=password] {
 	margin: auto;
 	min-height: 200px;
 }
- 
+
 /* Hide the carousel text when the screen is less than 600 pixels wide */
 @media ( max-width : 600px) {
 	.carousel-caption {
 		display: none;
 	}
-} 
+}
+
 .thumbnail {
-    padding: 0 0 15px 0;
-    border: none;
-    border-radius: 0;
-  }
-  .thumbnail img {
-    width: 100%;
-    height: 100%;
-    margin-bottom: 10px;
-  }
- .thumbnail {
-    padding: 0 0 15px 0;
-    border: none;
-    border-radius: 0;
-  }
-  .thumbnail img {
-    width: 100%;
-    height: 100%;
-    margin-bottom: 10px;
-  }
-  
-  .container {
+	padding: 0 0 15px 0;
+	border: none;
+	border-radius: 0;
+}
+
+.thumbnail img {
+	width: 100%;
+	height: 100%;
+	margin-bottom: 10px;
+}
+
+.thumbnail {
+	padding: 0 0 15px 0;
+	border: none;
+	border-radius: 0;
+}
+
+.thumbnail img {
+	width: 100%;
+	height: 100%;
+	margin-bottom: 10px;
+}
+
+.container {
 	padding: 80px 120px;
 }
 
@@ -208,4 +208,34 @@ input[type=password] {
 
 .person:hover {
 	border-color: #f1f1f1;
+}
+
+/*Tabella listaStanze */
+#tabella {
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	border-collapse: collapse;
+	width: 100%;
+}
+
+#tabella td, #customers th {
+	border: 1px solid #ddd;
+	padding: 8px;
+}
+
+#tabella tr:nth-child(even) {
+	background-color: #f2f2f2;
+}
+
+#tabella tr:hover {
+	background-color: #ddd;
+}
+
+#tabella th {
+	border: 1px solid #ddd;
+	padding-top: 12px;
+	padding-bottom: 12px;
+	padding: 8px;
+	text-align: left;
+	background-color: #C0C0C0;
+	color: white;
 }
