--- a/src/main/webapp/css/stile.css
+++ b/src/main/webapp/css/stile.css
@@ -14,25 +14,8 @@ input[type=radio] {
 	margin: 11px 0;
 }*/
 
-/*Bottone all'interno della navbar*/
-.button1 {
-	color: gray;
-	padding: 15px 28px;
-	text-align: center;
-	font-size: 15px;
-	border: none;
-	background: none;
-	float: center;
-}
-
-.button1:hover {
-	color: white;
-}
-
-/* Remove the navbar's default margin-bottom and rounded borders */
-.navbar {
-	margin-bottom: 0;
-	border-radius: 0;
+.reg {
+	color: blue;
 }
 
 p>a:hover {
@@ -63,13 +46,14 @@ ul {
 input[type=text] {
 	border: 2px solid black;
 	border-radius: 4px;
-	width: 30%;
+
+
 }
 
 input[type=password] {
 	border: 2px solid black;
 	border-radius: 4px;
-	width: 30%;
+
 }
 
 .button {
@@ -112,14 +96,14 @@ input[type=password] {
 	clear: both;
 }
 
-/* Home Page */
+/* Home Page 
 .carousel-inner img {
-	width: 100%; /* Set width to 100% */
+	width: 100%; 
 	margin: auto;
 	min-height: 200px;
 }
 
-/* Hide the carousel text when the screen is less than 600 pixels wide */
+Hide the carousel text when the screen is less than 600 pixels wide 
 @media ( max-width : 600px) {
 	.carousel-caption {
 		display: none;
@@ -153,7 +137,7 @@ input[type=password] {
 .container {
 	padding: 80px 120px;
 }
-
+*/
 .person {
 	border: 10px solid transparent;
 	margin-bottom: 25px;
@@ -165,6 +149,7 @@ input[type=password] {
 .person:hover {
 	border-color: #f1f1f1;
 }
+
 
 /*Tabella listaStanze */
 #tabella {
@@ -194,130 +179,6 @@ input[type=password] {
 	text-align: left;
 	background-color: #C0C0C0;
 	color: white;
-}
-
-/*Pagina Contatti */
-.google-maps {
-	position: relative;
-	padding-bottom: 75%;
-	height: 0;
-	overflow: hidden;
-}
-
-.google-maps>iframe {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100% !important;
-	height: 30% !important;
-}
-
-.container-fluid {
-	padding: 60px 50px;
-}
-
-.bg-grey {
-	background-color: #f6f6f6;
-}
-
-.logo-small {
-	color: #f4511e;
-	font-size: 50px;
-}
-
-.logo {
-	color: #f4511e;
-	font-size: 200px;
-}
-
-.thumbnail {
-	padding: 0 0 15px 0;
-	border: none;
-	border-radius: 0;
-}
-
-.thumbnail img {
-	width: 100%;
-	height: 100%;
-	margin-bottom: 10px;
-}
-
-.carousel-control.right, .carousel-control.left {
-	background-image: none;
-	color: #f4511e;
-}
-
-.carousel-indicators li {
-	border-color: #f4511e;
-}
-
-.carousel-indicators li.active {
-	background-color: #f4511e;
-}
-
-.item h4 {
-	font-size: 19px;
-	line-height: 1.375em;
-	font-weight: 400;
-	font-style: italic;
-	margin: 70px 0;
-}
-
-.item span {
-	font-style: normal;
-}
-
-.panel {
-	border: 1px solid #f4511e;
-	border-radius: 0 !important;
-	transition: box-shadow 0.5s;
-}
-
-.panel:hover {
-	box-shadow: 5px 0px 40px rgba(0, 0, 0, .2);
-}
-
-.panel-footer .btn:hover {
-	border: 1px solid #f4511e;
-	background-color: #fff !important;
-	color: #f4511e;
-}
-
-.panel-heading {
-	color: #fff !important;
-	background-color: #f4511e !important;
-	padding: 25px;
-	border-bottom: 1px solid transparent;
-	border-top-left-radius: 0px;
-	border-top-right-radius: 0px;
-	border-bottom-left-radius: 0px;
-	border-bottom-right-radius: 0px;
-}
-
-.panel-footer {
-	background-color: white !important;
-}
-
-.panel-footer h3 {
-	font-size: 32px;
-}
-
-.panel-footer h4 {
-	color: #aaa;
-	font-size: 14px;
-}
-
-.panel-footer .btn {
-	margin: 15px 0;
-	background-color: #f4511e;
-	color: #fff;
-}
-
-@media screen and (max-width: 768px) {
-	.col-sm-4 {
-		text-align: center;
-		margin: 25px 0;
-	}
 }
 
 /*Bottoni lista stanze */
@@ -362,4 +223,20 @@ a {
 	background-color: red; opacity : 0.6;
 	cursor: not-allowed;
 	opacity: 0.6;
+}
+
+/*Google Maps */
+
+.google-maps {
+  position: relative;
+  padding-bottom: 75%; // Definisco l'aspect ratio
+  height: 0;
+  overflow: hidden;
+}
+.google-maps > iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 40% !important;
 }
