--- a/src/main/webapp/css/footer.css
+++ b/src/main/webapp/css/footer.css
@@ -2,6 +2,7 @@
 footer {
 	background-color: black;
 	color: white;
+	
 }
 
 /*Social nel Footer */
@@ -35,4 +36,8 @@ footer {
 .fa-instagram {
 	background: #FF1493;
 	color: white;
+}
+
+p {
+	font: normal 16px Verdana
 }
