--- a/src/main/webapp/css/stile.css
+++ b/src/main/webapp/css/stile.css
@@ -1,5 +1,7 @@
 @CHARSET "ISO-8859-1";
-
+body {
+font: normal 16px Arial;
+}
 /*.img-carousel {
 	margin: auto;
 	width: 45%;
@@ -13,7 +15,9 @@ input[type=radio] {
 	width: 30px;
 	margin: 11px 0;
 }*/
-
+p {
+font: normal 16px Verdana
+}
 .reg {
 	color: blue;
 }
