--- a/src/main/webapp/css/areaP.css
+++ b/src/main/webapp/css/areaP.css
@@ -1,3 +1,17 @@
+html,body{
+	height:100%;
+	
+}
+body{
+	margin:0;
+}
+.wrap{
+	height: auto !important;
+		min-height: 65%;
+	position: relative;
+	margin: 0 auto -60px;
+}
+
 .button4 {
 	background-color: white;
 	border: 2px solid #008CBA;
