--- a/src/main/webapp/css/footer.css
+++ b/src/main/webapp/css/footer.css
@@ -2,7 +2,10 @@
 footer {
 	background-color: black;
 	color: white;
-	
+	width: 100%;
+	position: relative;
+	bottom: 0px;
+	margin-top: 100px;
 }
 
 /*Social nel Footer */
@@ -36,8 +39,4 @@ footer {
 .fa-instagram {
 	background: #FF1493;
 	color: white;
-}
-
-p {
-	font: normal 16px Verdana
 }
