--- a/src/main/webapp/css/form.css
+++ b/src/main/webapp/css/form.css
@@ -21,3 +21,22 @@ input[type=password]:focus {
   width: 70%;
   background-color: lightblue;
 }
+
+select {
+  width: 50%;
+  padding: 16px 20px;
+  border: none;
+  border-radius: 4px;
+  background-color: #f1f1f1;
+}
+
+input[type=date]{
+	  width: 50%;
+  padding: 16px 20px;
+  border: none;
+  border-radius: 4px;
+  background-color: #f1f1f1;
+	
+}
+
+
