--- a/src/main/webapp/css/stile.css
+++ b/src/main/webapp/css/stile.css
@@ -48,16 +48,16 @@ ul {
 
 /* Registrazione */
 .button {
-	background-color: white;
-	border: 2px solid #008CBA;
-	color: black;
-	padding: 12px 28px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 14px;
-	margin: 4px 2px;
-	cursor: pointer;
+ padding: 15px 25px;
+  font-size: 24px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #008B8B;
+  background-color: white;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
 }
 
 .button:hover {
@@ -65,7 +65,11 @@ ul {
 	color: white;
 }
 
-
+.button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
 
 
 /*Stile nelle varie stanze */
