--- a/src/main/webapp/css/stile.css
+++ b/src/main/webapp/css/stile.css
@@ -55,7 +55,8 @@ ul {
   outline: none;
   color: #008B8B;
   background-color: white;
-  border: none;
+  border-style: solid;
+  border-color: grey;
   border-radius: 15px;
   box-shadow: 0 9px #999;
 }
@@ -66,7 +67,7 @@ ul {
 }
 
 .button:active {
-  background-color: #3e8e41;
+  background-color: #008B8B;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
