--- a/src/main/webapp/css/stile.css
+++ b/src/main/webapp/css/stile.css
@@ -92,7 +92,7 @@ ul {
 	clear: both;
 }
 
-/* Home Page 
+/* Home Page */
 .carousel-inner img {
 	width: 100%; 
 	margin: auto;
@@ -105,7 +105,7 @@ Hide the carousel text when the screen is less than 600 pixels wide
 		display: none;
 	}
 }
-
+/*
 .thumbnail {
 	padding: 0 0 15px 0;
 	border: none;
